--- a/pagoservicios-servicioux-dev.properties
+++ b/pagoservicios-servicioux-dev.properties
@@ -12,8 +12,9 @@ spring.config.import=optional:configserver:http://localhost:8888
 #spring.r2dbc.username=bootcamp@blog-server-db
 #spring.r2dbc.password=B00tcamp2022
 
-application.urlApiBlogs=http://localhost:8080/blogs
-application.urlApiAuthors=http://localhost:8080/authors
+application.urlApiFavoritos=http://localhost:8085/favoritos
+application.urlApiPagos=http://localhost:8088/pagos
+application.urlApiServicios=http://localhost:8088/servicios
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9999/realms/bootcamp-realm
 
