--- a/pagoservicios-favoritos-dev.yml
+++ b/pagoservicios-favoritos-dev.yml
@@ -2,8 +2,10 @@ server:
   port: 8085
 
 spring:
+  config:
+        import: optional:configserver:http://${apiconfigserver}:8888
   data:
       mongodb:
-        host: 127.0.0.1
+        host: ${mongodb_server}
         port: 27017
         database: favoritos
