--- a/pagoservicios-favoritos.yml
+++ b/pagoservicios-favoritos.yml
@@ -2,6 +2,8 @@ server:
   port: 8085
 
 spring:
+  config:
+        import: optional:configserver:http://localhost:8888
   data:
       mongodb:
         host: 127.0.0.1
