--- a/pagoservicios-favoritos.yml
+++ b/pagoservicios-favoritos.yml
@@ -2,6 +2,8 @@ server:
   port: 8085
 
 spring:
+  application:
+    name: pagoservicios-favoritos
   config:
         import: optional:configserver:http://localhost:8888
   data:
