--- a/pagoservicios-servicioux-dev.yml
+++ b/pagoservicios-servicioux-dev.yml
@@ -5,13 +5,13 @@ spring:
   application:
     name: pagoservicios-servicioux
   config:
-        import: optional:configserver:http://${apiconfigserver}:8888
+        import: ${HOST_API_CONFIGSERVER}
   security:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: rhttp://${keycloak}:8080/auth/realms/Reto-Integrador-Realm
+          issuer-uri: ${HOST_KEYCLOAK}
 application:
-  urlApiFavoritos: http://${apifavoritos}:8085/favoritos
-  urlApiPagos: http://${apipagos}:8088/pagos
-  urlApiServicios: http://${apipagos}:8088/servicios
+  urlApiFavoritos: ${HOST_API_FAVORITOS}/favoritos
+  urlApiPagos: ${HOST_API_PAGOS}/pagos
+  urlApiServicios: ${HOST_API_PAGOS}/servicios
