--- a/pagoservicios-servicioux-dev.yml
+++ b/pagoservicios-servicioux-dev.yml
@@ -5,13 +5,13 @@ spring:
   application:
     name: pagoservicios-servicioux
   config:
-        import: ${HOST_API_CONFIGSERVER}
+        import: optional:configserver:http://${HOST_API_CONFIGSERVER}:8888
   security:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: ${HOST_KEYCLOAK}
+          issuer-uri: http://${HOST_KEYCLOAK}:8080/auth/realms/Reto-Integrador-Realm
 application:
-  urlApiFavoritos: ${HOST_API_FAVORITOS}/favoritos
-  urlApiPagos: ${HOST_API_PAGOS}/pagos
-  urlApiServicios: ${HOST_API_PAGOS}/servicios
+  urlApiFavoritos: http://${HOST_API_FAVORITOS}:8085/favoritos
+  urlApiPagos: http://${HOST_API_PAGOS}:8088/pagos
+  urlApiServicios: http://${HOST_API_PAGOS}:8088/servicios
