--- a/pagoservicios-servicioux-dev.yml
+++ b/pagoservicios-servicioux-dev.yml
@@ -6,11 +6,11 @@ spring:
     name: pagoservicios-servicioux
   config:
         import: optional:configserver:http://${HOST_API_CONFIGSERVER}:8888
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://${HOST_KEYCLOAK}:8080/auth/realms/Reto-Integrador-Realm
+#  security:
+#    oauth2:
+#      resourceserver:
+#        jwt:
+#          issuer-uri: http://${HOST_KEYCLOAK}:8080/auth/realms/Reto-Integrador-Realm
 application:
   urlApiFavoritos: http://${HOST_API_FAVORITOS}:8085/favoritos
   urlApiPagos: http://${HOST_API_PAGOS}:8088/pagos
