--- a/pagoservicios-servicioux.yml
+++ b/pagoservicios-servicioux.yml
@@ -6,11 +6,11 @@ spring:
     name: pagoservicios-servicioux
   config:
         import: optional:configserver:http://localhost:8888
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: rhttp://localhost:8080/auth/realms/Reto-Integrador-Realm
+#  security:
+#    oauth2:
+#      resourceserver:
+#        jwt:
+#          issuer-uri: rhttp://localhost:8080/auth/realms/Reto-Integrador-Realm
 application:
   urlApiFavoritos: http://localhost:8085/favoritos
   urlApiPagos: http://localhost:8088/pagos
