--- a/pagoservicios-pagos-dev.yml
+++ b/pagoservicios-pagos-dev.yml
@@ -6,10 +6,10 @@ spring:
     name: pagoservicios-pagos
   config:
     import: optional:configserver:http://${HOST_API_CONFIGSERVER}:8888
-#  r2dbc:
-#    url: r2dbc:pool:mssql://${HOST_SQL_SERVER}:1433/BDPAGOSERVICIOS
-#    username: sa
-#    password: B00tcamp2022
-#logging:
-#  level:
-#    org.springframework.data.r2dbc: DEBUG
+  r2dbc:
+    url: r2dbc:pool:mssql://${HOST_MYSQL_SERVER}:1433/BDPAGOSERVICIOS
+    username: root
+    password: toor
+logging:
+  level:
+    org.springframework.data.r2dbc: DEBUG
