--- a/pagoservicios-pagos-dev.yml
+++ b/pagoservicios-pagos-dev.yml
@@ -7,7 +7,7 @@ spring:
   config:
     import: optional:configserver:http://${HOST_API_CONFIGSERVER}:8888
   r2dbc:
-    url: r2dbc:pool:mssql://${HOST_MYSQL_SERVER}:1433/BDPAGOSERVICIOS
+    url: r2dbc:pool:mysql//${HOST_MYSQL_SERVER}:1433/BDPAGOSERVICIOS?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useLocalSessionState=true
     username: root
     password: toor
 logging:
