--- a/pagoservicios-pagos-dev.yml
+++ b/pagoservicios-pagos-dev.yml
@@ -7,7 +7,7 @@ spring:
   config:
     import: optional:configserver:http://${HOST_API_CONFIGSERVER}:8888
   r2dbc:
-    url: r2dbc:mysql://${HOST_SQL_SERVER}:3306/BDPAGOSERVICIOS?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useLocalSessionState=true
+    url: r2dbc:mysql://${HOST_MYSQL_SERVER}:3306/BDPAGOSERVICIOS?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useLocalSessionState=true
     username: root
     password: B00tcamp2022
 logging:
