--- a/pagoservicios-pagos-dev.yml
+++ b/pagoservicios-pagos-dev.yml
@@ -10,6 +10,12 @@ spring:
     url: r2dbc:pool:mysql://${HOST_MYSQL_SERVER}:3306/BDPAGOSERVICIOS?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useLocalSessionState=true
     username: root
     password: B00tcamp2022
+    pool:
+      enabled: true
+      max-size: 20
+      validation-query: SELECT 1
+      initial-size: 5
+      max-idle-time: 30m
 logging:
   level:
     org.springframework.data.r2dbc: DEBUG
