--- a/pagoservicios-pagos-dev.yml
+++ b/pagoservicios-pagos-dev.yml
@@ -7,9 +7,15 @@ spring:
   config:
     import: optional:configserver:http://${HOST_API_CONFIGSERVER}:8888
   r2dbc:
-    url: r2dbc:mysql://${HOST_MYSQL_SERVER}:3306/BDPAGOSERVICIOS?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useLocalSessionState=true
+    url: mysql://${HOST_MYSQL_SERVER}:3306/BDPAGOSERVICIOS?useUnicode=true&characterEncoding=UTF-8&useSSL=false&useLocalSessionState=true
     username: root
     password: B00tcamp2022
+    pool:
+      enabled: true
+      initial-size: 100
+      max-size: 200
+      max-idle-time: 30m
+      validation-query: SELECT 1
 logging:
   level:
     org.springframework.data.r2dbc: DEBUG
